# optical-network-wm

./: .gitignore  README.md  pyproject.toml
checkpoints/smoke/: config.json  history.json
data_100/: dataset_small_meta.json  normalization.json
docs/: dataset_spec.md
notebooks/: train_colab.ipynb
scripts/: jepa_readiness.py  subsample.py
src/optical_wm/: __init__.py  evaluate_dataset.py  generate.py  train.py
src/optical_wm/core/: gnpy_wrapper.py  hdf5_io.py  schemas.py
src/optical_wm/evaluation/: ablation.py  planning.py  probing.py  rollout.py
src/optical_wm/models/: encoder.py  predictor.py  world_model.py
src/optical_wm/policies/: load_balancing.py  margin_optimization.py  mixed_ops.py  provisioning.py  recovery.py
src/optical_wm/training/: config.py  dataset.py  trainer.py
tests/: conftest.py  test_level0_schemas.py  test_level1_gnpy.py  test_level2_load_balance.py  test_level2_margin_opt.py  test_level2_mixed_ops.py  test_level2_provisioning.py  test_level2_recovery.py
