[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optical-network-wm"
version = "0.1.0"
description = "JEPA World Model dataset generator for optical network digital twins"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.21",
    "h5py>=3.7",
    "networkx>=2.8",
]

[project.optional-dependencies]
gnpy = ["gnpy"]
train = ["torch>=2.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
